--- a/site/public/assets/css/flex-slider.css
+++ b/site/public/assets/css/flex-slider.css
@@ -85,8 +85,8 @@ html[xmlns] .flexslider .slides {
  * ====================================================================================================================*/
 .flexslider {
   margin: 0;
-  background: #fff;
-  border: 4px solid #fff;
+  background: #F4D634;
+  border: 4px solid #F4D634;
   position: relative;
   zoom: 1;
   -webkit-border-radius: 4px;
