Change design colors

--- a/site/public/assets/css/templatemo-sixteen.css
+++ b/site/public/assets/css/templatemo-sixteen.css
@@ -11,7 +11,7 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #F4D634;
+  background-color: #FFFFE0;
 }
 p {
 	margin-bottom: 0px;
@@ -55,13 +55,13 @@ ul.social-icons li a {
 }
 
 ul.social-icons li a:hover {
-	background-color: #E00000;
-	color: #F4D634;
+	background-color: #8A9A5B;
+	color: #FFFFE0;
 }
 
 a.filled-button {
-	background-color: #E00000;
-	color: #F4D634;
+	background-color: #8A9A5B;
+	color: #FFFFE0;
 	font-size: 14px;
 	text-transform: capitalize;
 	font-weight: 300;
@@ -72,14 +72,14 @@ a.filled-button {
 }
 
 a.filled-button:hover {
-	background-color: #121212;
+	background-color: #4B5320;
 	color: #eee;
 }
 
 .section-heading {
 	text-align: left;
 	margin-bottom: 60px;
-	border-bottom: 1px solid #E00000;
+	border-bottom: 1px solid #8A9A5B;
 }
 
 .section-heading h2 {
@@ -110,7 +110,7 @@ a.filled-button:hover {
 }
 
 .page-heading .text-content h4 {
-	color: #E00000;
+	color: #8A9A5B;
 	font-size: 22px;
 	text-transform: uppercase;
 	font-weight: 700;
@@ -118,7 +118,7 @@ a.filled-button:hover {
 }
 
 .page-heading .text-content h2 {
-	color: #F4D634;
+	color: #FFFFE0;
 	font-size: 62px;
 	text-transform: uppercase;
 	letter-spacing: 5px;
@@ -126,14 +126,14 @@ a.filled-button:hover {
 
 #preloader {
   overflow: hidden;
-  background: #E00000;
+  background: #8A9A5B;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   position: fixed;
   z-index: 9999999;
-  color: #F4D634;
+  color: #FFFFE0;
 }
 
 #preloader .jumper {
@@ -149,7 +149,7 @@ a.filled-button:hover {
 }
 
 #preloader .jumper > div {
-  background-color: #F4D634;
+  background-color: #FFFFE0;
   width: 10px;
   height: 10px;
   border-radius: 100%;
@@ -225,7 +225,7 @@ header .navbar {
 .background-header {
 	top: 0;
 	position: fixed;
-	background-color: #F4D634!important;
+	background-color: #FFFFE0!important;
 	box-shadow: 0px 1px 10px rgba(0,0,0,0.1);
 }
 .background-header .navbar-brand h2 {
@@ -239,7 +239,7 @@ header .navbar {
 .background-header .navbar-nav .nav-link.active,
 .background-header .navbar-nav .nav-link.show,
 .background-header .navbar-nav .show>.nav-link {
-	color: #E00000!important;
+	color: #8A9A5B!important;
 }
 .navbar .navbar-brand {
 	float: 	left;
@@ -247,7 +247,7 @@ header .navbar {
 	outline: none;
 }
 .navbar .navbar-brand h2 {
-	color: #F4D634;
+	color: #FFFFE0;
 	text-transform: uppercase;
 	font-size: 24px;
 	font-weight: 700;
@@ -258,7 +258,7 @@ header .navbar {
 }
 .navbar .navbar-brand h2 em {
 	font-style: normal;
-	color: #E00000;
+	color: #8A9A5B;
 }
 #navbarResponsive {
 	z-index: 999;
@@ -274,7 +274,7 @@ header .navbar {
 	font-size: 15px;
 	font-weight: 500;
 	letter-spacing: 0.5px;
-	color: #F4D634;
+	color: #FFFFE0;
 	transition: all 0.5s;
 	margin-top: 5px;
 }
@@ -283,16 +283,16 @@ header .navbar {
 .navbar .navbar-nav .nav-link.active,
 .navbar .navbar-nav .nav-link.show,
 .navbar .navbar-nav .show>.nav-link {
-	color: #F4D634;
+	color: #FFFFE0;
 	padding-bottom: 25px;
-	border-bottom: 3px solid #E00000;
+	border-bottom: 3px solid #8A9A5B;
 }
 .navbar .navbar-toggler-icon {
 	background-image: none;
 }
 .navbar .navbar-toggler {
-	border-color: #E00000;
-	background-color: #F4D634;	
+	border-color: #8A9A5B;
+	background-color: #FFFFE0;	
 	height: 36px;
 	outline: none;
 	border-radius: 0px;
@@ -302,7 +302,7 @@ header .navbar {
 }
 .navbar .navbar-toggler-icon:after {
 	content: '\f0c9';
-	color: #E00000;
+	color: #8A9A5B;
 	font-size: 18px;
 	line-height: 26px;
 	font-family: 'FontAwesome';
@@ -319,7 +319,7 @@ header .navbar {
 
 .banner-item-01 {
 	padding: 300px 0px;
-	background-image: url(../images/img1.jpg);
+	background-image: url(../images/img1.jpeg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -354,7 +354,7 @@ header .navbar {
 }
 
 .banner .text-content h4 {
-	color: #E00000;
+	color: #8A9A5B;
 	font-size: 22px;
 	text-transform: uppercase;
 	font-weight: 700;
@@ -362,7 +362,7 @@ header .navbar {
 }
 
 .banner .text-content h2 {
-	color: #F4D634;
+	color: #FFFFE0;
 	font-size: 62px;
 	text-transform: uppercase;
 	letter-spacing: 5px;
@@ -389,14 +389,14 @@ header .navbar {
     height: 10px;
     border-radius: 50%;
     margin: 0 10px;
-    background-color: #E00000;
+    background-color: #8A9A5B;
     opacity: 0.5;
 }
 .owl-banner .owl-dots .owl-dot:focus {
     outline: none
 }
 .owl-banner .owl-dots .owl-dot.active {
-    background-color: #F4D634;
+    background-color: #FFFFE0;
     opacity: 1;
 }
 
@@ -414,11 +414,11 @@ header .navbar {
 	text-transform: uppercase;
 	font-size: 13px;
 	font-weight: 700;
-	color: #E00000;
+	color: #8A9A5B;
 }
 
 .product-item {
-	border: 1px solid #E00000;
+	border: 1px solid #8A9A5B;
 	margin-bottom: 30px;
 }
 
@@ -455,7 +455,7 @@ header .navbar {
 }
 
 .product-item .down-content ul li i {
-	color: #E00000;
+	color: #8A9A5B;
 	font-size: 14px;
 }
 
@@ -464,7 +464,7 @@ header .navbar {
 	right: 30px;
 	bottom: 30px;
 	font-size: 13px;
-	color: #E00000;
+	color: #8A9A5B;
 	font-weight: 500;
 }
 
@@ -478,7 +478,7 @@ header .navbar {
 }
 
 .about-features p {
-	border-bottom: 1px solid #E00000;
+	border-bottom: 1px solid #8A9A5B;
 	padding-bottom: 20px;
 }
 
@@ -492,7 +492,7 @@ header .navbar {
 }
 
 .best-features .container .row {
-	border-bottom: 1px solid #E00000;
+	border-bottom: 1px solid #8A9A5B;
 	padding-bottom: 60px;
 }
 
@@ -538,11 +538,11 @@ header .navbar {
 }
 
 .best-features ul.featured-list li a:hover {
-	color: #E00000;
+	color: #8A9A5B;
 }
 
 .best-features ul.featured-list li a:hover::before {
-	background-color: #E00000;
+	background-color: #8A9A5B;
 }
 
 .best-features .filled-button {
@@ -558,7 +558,7 @@ header .navbar {
 .call-to-action .inner-content {
 	margin-top: 60px;
 	padding: 30px;
-	background-color: #F4D634;
+	background-color: #FFFFE0;
 	border-radius: 5px;
 }
 
@@ -591,7 +591,7 @@ footer {
 }
 
 footer .inner-content {
-	border-top: 1px solid #E00000;
+	border-top: 1px solid #8A9A5B;
 	margin-top: 60px;
 	padding: 60px 0px;
 }
@@ -601,7 +601,7 @@ footer .inner-content p {
 }
 
 footer .inner-content p a {
-	color: #E00000;
+	color: #8A9A5B;
 	margin-left: 3px;
 }
 
@@ -616,7 +616,7 @@ footer .inner-content p a {
 
 .products .filters {
 	text-align: center;
-	border-bottom: 1px solid #E00000;
+	border-bottom: 1px solid #8A9A5B;
 	padding-bottom: 10px;
 	margin-bottom: 60px;
 }
@@ -634,7 +634,7 @@ footer .inner-content p a {
 
 .products .filters ul li.active,
 .products .filters ul li:hover {
-  color: #E00000;
+  color: #8A9A5B;
 }
 
 .products ul.pages {
@@ -652,7 +652,7 @@ footer .inner-content p a {
 	height: 44px;
 	display: inline-block;
 	line-height: 42px;
-	border: 1px solid #E00000;
+	border: 1px solid #8A9A5B;
 	font-size: 15px;
 	font-weight: 700;
 	color: #121212;
@@ -661,9 +661,9 @@ footer .inner-content p a {
 
 .products ul.pages li a:hover,
 .products ul.pages li.active a {
-	background-color: #E00000;
-	border-color: #E00000;
-	color: #F4D634;
+	background-color: #8A9A5B;
+	border-color: #8A9A5B;
+	color: #FFFFE0;
 }
 
 
@@ -675,7 +675,7 @@ footer .inner-content p a {
 }
 
 .team-member {
-	border: 1px solid #E00000;
+	border: 1px solid #8A9A5B;
 	margin-bottom: 30px;
 }
 
@@ -715,8 +715,8 @@ footer .inner-content p a {
 }
 
 .team-member .thumb-container .hover-effect .hover-content ul.social-icons li a:hover {
-	background-color: #F4D634;
-	color: #E00000;
+	background-color: #FFFFE0;
+	color: #8A9A5B;
 }
 
 .team-member:hover .hover-effect {
@@ -733,7 +733,7 @@ footer .inner-content p a {
 .team-member .down-content span {
 	display: block;
 	font-size: 13px;
-	color: #E00000;
+	color: #8A9A5B;
 	font-weight: 500;
 	margin-bottom: 20px;
 }
@@ -767,13 +767,13 @@ footer .inner-content p a {
 	display: inline-block;
 	text-align: center;
 	line-height: 100px;
-	background-color: #E00000;
-	color: #F4D634;
+	background-color: #8A9A5B;
+	color: #FFFFE0;
 	font-size: 32px;
 }
 
 .services .service-item .down-content {
-	background-color: #F4D634;
+	background-color: #FFFFE0;
 	padding: 40px 30px;
 }
 
@@ -818,7 +818,7 @@ footer .inner-content p a {
 }
 
 .find-us p {
-	border-bottom: 1px solid #E00000;
+	border-bottom: 1px solid #8A9A5B;
 	padding-bottom: 30px;
 	margin-bottom: 30px;
 }
@@ -847,14 +847,14 @@ footer .inner-content p a {
 	height: 44px;
 	display: inline-block;
 	line-height: 42px;
-	border: 1px solid #E00000;
+	border: 1px solid #8A9A5B;
 	border-radius: 0px;
 	margin-bottom: 30px;
 }
 
 .contact-form input:focus {
 	box-shadow: none;
-	border: 1px solid #E00000;
+	border: 1px solid #8A9A5B;
 }
 
 .contact-form textarea {
@@ -864,19 +864,19 @@ footer .inner-content p a {
 	min-height: 120px;
 	height: 120px;
 	max-height: 180px;
-	border: 1px solid #E00000;
+	border: 1px solid #8A9A5B;
 	border-radius: 0px;
 	margin-bottom: 30px;
 }
 
 .contact-form textarea:focus {
 	box-shadow: none;
-	border: 1px solid #E00000;
+	border: 1px solid #8A9A5B;
 }
 
 .contact-form button.filled-button {
-	background-color: #E00000;
-	color: #eee;
+	background-color: #8A9A5B;
+	color: black;
 	font-size: 14px;
 	text-transform: capitalize;
 	font-weight: 300;
@@ -890,7 +890,7 @@ footer .inner-content p a {
 }
 
 .contact-form button.filled-button:hover {
-	background-color: #121212;
+	background-color:#4B5320;
 	color: #eee;
 }
 
@@ -907,11 +907,11 @@ footer .inner-content p a {
 }
 
 .accordion a:hover {
-	color: #E00000!important;
+	color: #8A9A5B!important;
 }
 
 .accordion a.active {
-  color: #E00000!important;
+  color: #8A9A5B!important;
 }
 
 .accordion li .content {
@@ -920,11 +920,11 @@ footer .inner-content p a {
 }
 
 .accordion li:first-child {
-	border-top: 1px solid #E00000;
+	border-top: 1px solid #8A9A5B;
 }
 
 .accordion li {
-	border-bottom: 1px solid #E00000;
+	border-bottom: 1px solid #8A9A5B;
 	padding: 15px 0px;
 }
 
@@ -1022,11 +1022,11 @@ footer .inner-content p a {
 	    left: 0;
 	    width: 100%;
 	    text-align: center;
-	    background-color: #F4D634;
+	    background-color: #FFFFE0;
 	    box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
 	}
 	.navbar .navbar-nav .nav-item {
-		border-bottom: 1px solid #E00000;
+		border-bottom: 1px solid #8A9A5B;
 	}
 	.navbar .navbar-nav .nav-item:last-child {
 		border-bottom: none;
@@ -1040,7 +1040,7 @@ footer .inner-content p a {
 	.navbar .navbar-nav .nav-link.active,
 	.navbar .navbar-nav .nav-link.show,
 	.navbar .navbar-nav .show>.nav-link {
-		color: #E00000!important;
+		color: #8A9A5B!important;
 		border-bottom: none!important;
 		padding-bottom: 15px;
 	}
