--- a/site/src/components/CartPage/CartPage.css
+++ b/site/src/components/CartPage/CartPage.css
@@ -65,7 +65,7 @@
 .item-price {
     font-weight: bold;
     font-size: 16px;
-    color: #d32f2f;
+    color: #4B5320;
 }
 
 /* Обобщение */
@@ -98,7 +98,7 @@
     width: 100%;
     margin-top: 20px;
     padding: 12px;
-    background: #d32f2f;
+    background: #4B5320;
     color: white;
     font-size: 16px;
     font-weight: bold;
