--- a/site/src/components/Products/ProductItem.css
+++ b/site/src/components/Products/ProductItem.css
@@ -52,12 +52,12 @@
 }
 
 .delete-btn {
-    background-color: #ef4444;
+    background-color: #4B5320;
     color: white;
 }
 
 .delete-btn:hover {
-    background-color: #dc2626;
+    background-color: #4B5320;
 }
 
 
