--- a/site/src/components/Register/Register.css
+++ b/site/src/components/Register/Register.css
@@ -48,7 +48,7 @@
 }
 
 .form-group input:focus {
-    border-color: #d32f2f;
+    border-color: #4B5320;
     outline: none;
 }
 
@@ -56,7 +56,7 @@
 .login-btn {
     width: 100%;
     padding: 12px;
-    background: #d32f2f;
+    background: #4B5320;
     border: none;
     border-radius: 8px;
     color: #fff;
@@ -67,7 +67,7 @@
 }
 
 .login-btn:hover {
-    background: #b71c1c;
+    background: #4B5320;
 }
 
 /* Линкове */
@@ -78,7 +78,7 @@
 }
 
 .extra-links a {
-    color: #d32f2f;
+    color: #4B5320;
     text-decoration: none;
 }
 
