--- a/site/src/components/Products/Products.css
+++ b/site/src/components/Products/Products.css
@@ -21,9 +21,9 @@
 }
 
 .pages li button.active {
-    background-color: #E00000;
+    background-color: #4B5320;
     color: white;
-    border-color: #E00000;
+    border-color: #4B5320;
 }
 
 .pages li button:disabled {
