--- a/site/public/assets/css/templatemo-sixteen.css
+++ b/site/public/assets/css/templatemo-sixteen.css
@@ -369,6 +369,9 @@ header .navbar {
 	background-repeat: no-repeat;
 	background-position: center center;
 }
+.home-heading{
+    background-image: url(../images/img1.jpg);
+}
 
 .banner .banner-item {
 	max-height: 600px;
